@@ -1,1 +1,5 @@
-- rename lunagen to sgt
+- build LuaState class in sgt_kernel
+- create/destroy lua state in kernel.cpp, using implementatoin from scLuaState
+- execute main module in lua state
+- return exit code from main module execution.
+
