@@ -1,3 +1,0 @@
-2014-02-08T23:19:36.939118000 [Notice] 	Log system initialized.
-2014-02-08T23:19:36.941118000 [Notice] 	Starting lua engine using root path: W:/Cloud/Projects/sgt/software
-2014-02-08T23:19:36.941118000 [Debug] 	      Exiting...
