@@ -1,4 +1,4 @@
-SET(TARGET_NAME "lunagen")
+SET(TARGET_NAME "sgt")
 SET(TARGET_DIR "./")
 
 INCLUDE_DIRECTORIES (../include)
@@ -24,7 +24,7 @@ ADD_CUSTOM_TARGET(${TARGET_NAME}_images)
 
 GENERATE_LIBRARY_IMAGE(ModuleLoader moduleloader_dll SOURCE_FILES)
 GENERATE_LIBRARY_IMAGE(sgtLuna sgtluna_dll SOURCE_FILES)
-GENERATE_LIBRARY_IMAGE(lunagen_kernel lunagen_kernel_dll SOURCE_FILES)
+GENERATE_LIBRARY_IMAGE(sgtCore sgtcore_dll SOURCE_FILES)
 
 GENERATE_EXT_LIBRARY_IMAGE(deps/lua51.dll lua51_dll SOURCE_FILES)
 GENERATE_EXT_LIBRARY_IMAGE(deps/osg97-osg.dll osg97_osg_dll SOURCE_FILES)
